# counties

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRDPARTY_LICENSE  TODO  build.pl  conanfile.py  conanfile.txt  conanfile_mac.txt  csv-create.pl  generate.pl  run.pl
.github/workflows/: main.yml
etc/: counties.csv  csv-create.pl  generate.pl
resources/: counties.csv  resources.qrc
src/: CMakeLists.txt  config.h.in  county.cpp  county.h  countydata.cpp  countydata.h  csvfile.cpp  csvfile.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  svgwidget.cpp  svgwidget.h
test/: CMakeLists.txt  countydata-test.cpp  main.cpp  resource-test.cpp
